--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Canvas Project</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://cdn.jsdelivr.net/gh/kchapelier/poisson-disk-sampling@2.3.1/build/poisson-disk-sampling.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script> -->
+
 </head>
 <body>
     <button id="imageButton">Image</button>
@@ -29,9 +32,11 @@
         <h3>Image Controls</h3>
         <input type="file" id="imagePicker" accept="image/*">
         <label for="dotSize">Dot Size:</label>
-        <input type="range" id="dotSize" min="1" max="5" value="2" step="0.2">
+        <input type="range" id="dotSize" min="1" max="50" value="2" step="0.2">
         <label for="density">Density:</label>
-        <input type="range" id="density" min="1" max="10" value="4">
+        <input type="range" id="density" min="1" max="10" value="4" step="1">
+        <label for="maxDistImage">Dot Max Dist:</label>
+        <input type="range" id="maxDistImage" min="10" max="500" value="50">
         <input type="color" id="foregroundColor" value="#000000">
         <input type="color" id="backgroundColor" value="#FFFFFF">
         <button id="applyImage">Apply</button>
@@ -46,12 +51,12 @@
         <input type="text" id="textInput" placeholder="Enter text">
         <label for="fontSize">Font Size:</label>
         <input type="number" id="fontSize" min="50" max="500" value="100">
-        <label for="dotSize">Dot Size:</label>
-        <input type="range" id="dotSizeText" min="1" max="5" value="2" step="0.2">
+        <label for="dotSizeText">Dot Size:</label>
+        <input type="range" id="dotSizeText" min="1" max="50" value="2" step="0.2">
+        <label for="densityText">Density:</label>
+        <input type="range" id="densityText" min="1" max="10" value="4">
         <label for="maxDistText">Dot Max Dist:</label>
         <input type="range" id="maxDistText" min="10" max="200" value="50">
-        <label for="density">Density:</label>
-        <input type="range" id="densityText" min="1" max="10" value="4">
         <input type="color" id="foregroundColorText" value="#000000">
         <input type="color" id="backgroundColorText" value="#FFFFFF">
         <button id="applyText">Apply</button>
@@ -62,9 +67,9 @@
         <label for="widthPattern">width:</label>
         <input type="number" id="widthPattern" min="100" max="1000" value="500">
         <label for="heightPattern">height:</label>
-        <input type="number" id="heightPattern" min="100" max="1000" value="300">
+        <input type="number" id="heightPattern" min="100" max="1000" value="500">
         <label for="dotSizePattern">Dot Size:</label>
-        <input type="range" id="dotSizePattern" min="1" max="5" value="2" step="0.2">
+        <input type="range" id="dotSizePattern" min="1" max="50" value="2" step="0.2">
         <label for="minDist">Dot min dist:</label>
         <input type="range" id="minDist" min="0.04" max="0.1" value="0.05" step="0.01">
         <label for="patternSize">Pattern Density:</label>
